--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
       "buttons/*": ["src/spa/components/atoms/buttons/*"],
       "context/*": ["src/context/*"],
       "fallbacks/*": ["src/spa/components/atoms/fallbacks/*"],
-      "footer/*": ["src/spa/shared/footer/*"],
+      "footer/*": ["src/spa/components/organisms/footer/*"],
       "forms/*": ["src/spa/components/atoms/forms/*"],
       "graphics/*": ["src/spa/components/atoms/graphics/*"],
       "header/*": ["src/spa/app/layout/header/*"],
@@ -48,7 +48,7 @@
       "shared/*": ["src/spa/shared/*"],
       "storybook/*": ["src/thirdParty/storybook/*"],
       "styles/*": ["src/styles/*"],
-      "tags/*": ["src/spa/shared/tags/*"],
+      "tags/*": ["src/spa/components/molecules/tags/*"],
       "templates/*": ["src/spa/components/templates/*"],
       "typography/*": ["src/spa/components/atoms/typography/*"],
       "types/*": ["src/types/*"],
