--- a/.babelrc
+++ b/.babelrc
@@ -18,7 +18,6 @@
     ["module-resolver", {
       "root": ["./src"],
       "alias": {
-        "about": "./src/spa/shared/about/",
         "alert": "./src/spa/components/atoms/alert/",
         "animations": "./src/spa/components/neutrons/animations/",
         "api": "./src/api/",
@@ -26,6 +25,7 @@
         "assets": "./src/assets/",
         "atoms": "./src/spa/components/atoms/",
         "buttons": "./src/spa/components/atoms/buttons/",
+        "copy": "./src/spa/components/molecules/copy/",
         "context": "./src/context/",
         "fallbacks": "./src/spa/components/atoms/fallbacks/",
         "footer": "./src/spa/components/organisms/footer/",
@@ -51,7 +51,6 @@
         "routing": "./src/spa/app/routing/",
         "schema": "./src/server/schema/",
         "server": "./src/server/",
-        "shared": "./src/spa/shared/",
         "storybook": "./src/thirdParty/storybook/",
         "styles": "./src/styles/",
         "tags": "./src/spa/components/molecules/tags/",
