--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,6 @@
     "sourceMap": true,
     "target": "es5",
     "paths": {
-      "about/*": ["src/spa/shared/about/*"],
       "alert/*": ["src/spa/components/atoms/alert/*"],
       "animations/*": ["src/spa/components/neutrons/animations/*"],
       "api/*": ["src/api/*"],
@@ -20,6 +19,7 @@
       "assets/*": ["src/assets/*"],
       "atoms/*": ["src/spa/components/atoms/*"],
       "buttons/*": ["src/spa/components/atoms/buttons/*"],
+      "copy/*": ["src/spa/components/molecules/copy/*"],
       "context/*": ["src/context/*"],
       "fallbacks/*": ["src/spa/components/atoms/fallbacks/*"],
       "footer/*": ["src/spa/components/organisms/footer/*"],
@@ -45,7 +45,6 @@
       "routing/*": ["src/spa/app/routing/*"],
       "schema/*": ["src/server/schema/*"],
       "server/*": ["src/server/*"],
-      "shared/*": ["src/spa/shared/*"],
       "storybook/*": ["src/thirdParty/storybook/*"],
       "styles/*": ["src/styles/*"],
       "tags/*": ["src/spa/components/molecules/tags/*"],
