Updating atomic architecture (#167)
* updating

* updating

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,6 @@
     "sourceMap": true,
     "target": "es5",
     "paths": {
-      "about/*": ["src/spa/shared/about/*"],
       "alert/*": ["src/spa/components/atoms/alert/*"],
       "animations/*": ["src/spa/components/neutrons/animations/*"],
       "api/*": ["src/api/*"],
@@ -20,9 +19,10 @@
       "assets/*": ["src/assets/*"],
       "atoms/*": ["src/spa/components/atoms/*"],
       "buttons/*": ["src/spa/components/atoms/buttons/*"],
+      "copy/*": ["src/spa/components/molecules/copy/*"],
       "context/*": ["src/context/*"],
       "fallbacks/*": ["src/spa/components/atoms/fallbacks/*"],
-      "footer/*": ["src/spa/shared/footer/*"],
+      "footer/*": ["src/spa/components/organisms/footer/*"],
       "forms/*": ["src/spa/components/atoms/forms/*"],
       "graphics/*": ["src/spa/components/atoms/graphics/*"],
       "header/*": ["src/spa/app/layout/header/*"],
@@ -45,10 +45,9 @@
       "routing/*": ["src/spa/app/routing/*"],
       "schema/*": ["src/server/schema/*"],
       "server/*": ["src/server/*"],
-      "shared/*": ["src/spa/shared/*"],
       "storybook/*": ["src/thirdParty/storybook/*"],
       "styles/*": ["src/styles/*"],
-      "tags/*": ["src/spa/shared/tags/*"],
+      "tags/*": ["src/spa/components/molecules/tags/*"],
       "templates/*": ["src/spa/components/templates/*"],
       "typography/*": ["src/spa/components/atoms/typography/*"],
       "types/*": ["src/types/*"],
