--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
       "context/*": ["src/context/*"],
       "fallbacks/*": ["src/spa/components/atoms/fallbacks/*"],
       "footer/*": ["src/spa/components/organisms/footer/*"],
-      "forms/*": ["src/spa/components/atoms/forms/*"],
+      "form/*": ["src/spa/components/atoms/form/*"],
+      "formItem/*": ["src/spa/components/atoms/formItem/*"],
       "graphics/*": ["src/spa/components/atoms/graphics/*"],
       "header/*": ["src/spa/app/layout/header/*"],
       "hooks/*": ["src/hooks/*"],
