--- a/.babelrc
+++ b/.babelrc
@@ -22,7 +22,6 @@
         "animations": "./src/spa/components/neutrons/animations/",
         "api": "./src/api/",
         "app": "./src/spa/app/",
-        "assets": "./src/assets/",
         "atoms": "./src/spa/components/atoms/",
         "buttons": "./src/spa/components/atoms/buttons/",
         "copy": "./src/spa/components/molecules/copy/",
@@ -35,6 +34,7 @@
         "header": "./src/spa/app/layout/header/",
         "hooks": "./src/hooks/",
         "icon": "./src/spa/components/neutrons/icon/",
+        "images": "./src/spa/components/neutrons/images/",
         "inputs": "./src/spa/components/atoms/inputs/",
         "landing": "./src/spa/landing/",
         "layout": "./src/spa/app/layout/",
