--- a/.babelrc
+++ b/.babelrc
@@ -23,6 +23,7 @@
         "api": "./src/api/",
         "app": "./src/spa/app/",
         "atoms": "./src/spa/components/atoms/",
+        "backgrounds": "./src/spa/components/neutrons/backgrounds/",
         "buttons": "./src/spa/components/atoms/buttons/",
         "copy": "./src/spa/components/molecules/copy/",
         "context": "./src/context/",
@@ -41,7 +42,7 @@
         "lottiePlayer": "./src/spa/components/neutrons/lottiePlayer/",
         "lotties": "./src/spa/components/neutrons/lotties/",
         "mockData": "./src/mockData/",
-        "modals": "./src/spa/shared/modals/",
+        "modal": "./src/spa/components/molecules/modal/",
         "molecules": "./src/spa/components/molecules/",
         "navigation": "./src/spa/app/layout/navigation/",
         "neutrons": "./src/spa/components/neutrons/",
