--- a/.babelrc
+++ b/.babelrc
@@ -31,6 +31,7 @@
         "footer": "./src/spa/components/organisms/footer/",
         "form": "./src/spa/components/atoms/form/",
         "formItem": "./src/spa/components/atoms/formItem/",
+        "forms": "./src/spa/components/molecules/forms/",
         "graphics": "./src/spa/components/neutrons/graphics/",
         "header": "./src/spa/app/layout/header/",
         "hooks": "./src/hooks/",
@@ -43,6 +44,7 @@
         "lotties": "./src/spa/components/neutrons/lotties/",
         "mockData": "./src/mockData/",
         "modal": "./src/spa/components/molecules/modal/",
+        "modals": "./src/spa/components/organisms/modals/",
         "molecules": "./src/spa/components/molecules/",
         "navigation": "./src/spa/app/layout/navigation/",
         "neutrons": "./src/spa/components/neutrons/",
