--- a/package.json
+++ b/package.json
@@ -117,8 +117,8 @@
     "lodash": "^4.17.15",
     "lord-icon-element": "^1.1.5",
     "lottie-web": "^5.5.9",
-    "react": "^0.0.0-experimental-38dd17ab9",
-    "react-dom": "^0.0.0-experimental-38dd17ab9",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "styled-components": "3.2.3",
