--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "@storybook/addon-viewport": "^5.2.5",
     "@storybook/addons": "^5.2.5",
     "@storybook/react": "^5.2.5",
-    "@testing-library/react-hooks": "^3.1.1",
     "@types/enzyme": "^3.10.3",
     "@types/history": "^4.7.2",
     "@types/jest": "^24.0.15",
@@ -67,7 +66,7 @@
     "eslint-plugin-jest": "^22.5.1",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
-    "eslint-plugin-react-hooks": "^4.0.4",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "file-loader": "^1.1.11",
     "identity-obj-proxy": "^3.0.0",
     "image-webpack-loader": "^4.3.1",
@@ -77,11 +76,11 @@
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "mini-css-extract-plugin": "^0.4.1",
-    "node-sass": "^4.12.0",
     "npm-run-all": "^4.1.3",
     "postcss-loader": "^3.0.0",
     "react-syntax-highlighter": "^11.0.2",
     "react-transition-group": "^4.3.0",
+    "sass": "^1.77.0",
     "storybook-addon-state": "^1.0.2",
     "style-loader": "^0.23.1",
     "stylelint": "^13.2.1",
@@ -119,8 +118,8 @@
     "lottie-web": "^5.5.9",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "styled-components": "3.2.3",
     "subscriptions-transport-ws": "^0.9.16"
   }
