--- a/package.json
+++ b/package.json
@@ -59,10 +59,11 @@
     "css-loader": "^0.28.7",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
-    "eslint": "^8.35.0",
+    "eslint": "^7.0.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "13.0.0",
     "eslint-config-turbo": "latest",
+    "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
